Fix broken onclick, tab setting

--- a/client/styles/mobile/mobile_header.scss
+++ b/client/styles/mobile/mobile_header.scss
@@ -146,7 +146,7 @@
     @include sidebar();
     transform: none !important;
     position: absolute;
-    top: 60px !important;
+    top: 61px !important;
     will-change: initial !important;
     .cui-menu {
         border: none;
